new projects list interface

--- a/client/app/projects/projects.html
+++ b/client/app/projects/projects.html
@@ -1,4 +1,4 @@
-<section class="bg-primary" id="about">
+<!-- <section class="bg-primary" id="about">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -9,4 +9,264 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-10">
+      <h1 class="page-header">Meet your next project</h1>
+    </div>
+    <div class="col-md-2"> <br><br><br>
+      <button type="button" class="btn btn-primary btn-block">Add your Project</button> <br>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-2">
+      <div class="list-group">
+        <button type="button" class="list-group-item">Healthcare</button>
+        <button type="button" class="list-group-item">Gastronomy</button>
+        <button type="button" class="list-group-item">Software</button>
+        <button type="button" class="list-group-item">Electronics</button>
+        <button type="button" class="list-group-item">Sports</button>
+      </div>
+    </div>
+
+    <div class="col-md-10">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">My Awesome Project</div>
+            <div class="panel-body">
+              <div class="col-md-4">
+                <a href="#" class="thumbnail">
+                  <img src="http://placehold.it/300x200" alt="...">
+                </a>
+              </div>
+              <div class="col-md-8">
+                <div class="row well">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque gravida enim in mi lacinia dapibus. Mauris in commodo arcu. Vestibulum interdum diam in ex malesuada, sit amet facilisis diam facilisis. Donec scelerisque nulla quis elit euismod gravida. Suspendisse ac pulvinar leo</div>
+                <div class="row">
+                  <div class="col-md-offset-7 col-md-5">
+                    <div class="btn-group" role="group" aria-label="...">
+                      <button type="button" class="btn btn-danger">Unlike</button>
+                      <button type="button" class="btn btn-primary">Follow</button>
+                      <button type="button" class="btn btn-success">Like</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">My Awesome Project</div>
+            <div class="panel-body">
+              <div class="col-md-4">
+                <a href="#" class="thumbnail">
+                  <img src="http://placehold.it/300x200" alt="...">
+                </a>
+              </div>
+              <div class="col-md-8">
+                <div class="row well">This is a project description. everything will make sense here.</div>
+                <div class="row">
+                  <div class="col-md-offset-7 col-md-5">
+                    <div class="btn-group" role="group" aria-label="...">
+                      <button type="button" class="btn btn-danger">Unlike</button>
+                      <button type="button" class="btn btn-primary">Follow</button>
+                      <button type="button" class="btn btn-success">Like</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  </div>
+
+     <!-- <div class="row">
+       <div class="col-sm-3 col-md-2 sidebar">
+         <ul class="nav nav-sidebar">
+           <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
+           <li><a href="#">Reports</a></li>
+           <li><a href="#">Analytics</a></li>
+           <li><a href="#">Export</a></li>
+         </ul>
+         <ul class="nav nav-sidebar">
+           <li><a href="">Nav item</a></li>
+           <li><a href="">Nav item again</a></li>
+           <li><a href="">One more nav</a></li>
+           <li><a href="">Another nav item</a></li>
+           <li><a href="">More navigation</a></li>
+         </ul>
+         <ul class="nav nav-sidebar">
+           <li><a href="">Nav item again</a></li>
+           <li><a href="">One more nav</a></li>
+           <li><a href="">Another nav item</a></li>
+         </ul>
+       </div>
+       <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+         <h1 class="page-header">Dashboard</h1>
+
+         <div class="row placeholders">
+           <div class="col-xs-6 col-sm-3 placeholder">
+             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+             <h4>Label</h4>
+             <span class="text-muted">Something else</span>
+           </div>
+           <div class="col-xs-6 col-sm-3 placeholder">
+             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+             <h4>Label</h4>
+             <span class="text-muted">Something else</span>
+           </div>
+           <div class="col-xs-6 col-sm-3 placeholder">
+             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+             <h4>Label</h4>
+             <span class="text-muted">Something else</span>
+           </div>
+           <div class="col-xs-6 col-sm-3 placeholder">
+             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+             <h4>Label</h4>
+             <span class="text-muted">Something else</span>
+           </div>
+         </div>
+
+         <h2 class="sub-header">Section title</h2>
+         <div class="table-responsive">
+           <table class="table table-striped">
+             <thead>
+               <tr>
+                 <th>#</th>
+                 <th>Header</th>
+                 <th>Header</th>
+                 <th>Header</th>
+                 <th>Header</th>
+               </tr>
+             </thead>
+             <tbody>
+               <tr>
+                 <td>1,001</td>
+                 <td>Lorem</td>
+                 <td>ipsum</td>
+                 <td>dolor</td>
+                 <td>sit</td>
+               </tr>
+               <tr>
+                 <td>1,002</td>
+                 <td>amet</td>
+                 <td>consectetur</td>
+                 <td>adipiscing</td>
+                 <td>elit</td>
+               </tr>
+               <tr>
+                 <td>1,003</td>
+                 <td>Integer</td>
+                 <td>nec</td>
+                 <td>odio</td>
+                 <td>Praesent</td>
+               </tr>
+               <tr>
+                 <td>1,003</td>
+                 <td>libero</td>
+                 <td>Sed</td>
+                 <td>cursus</td>
+                 <td>ante</td>
+               </tr>
+               <tr>
+                 <td>1,004</td>
+                 <td>dapibus</td>
+                 <td>diam</td>
+                 <td>Sed</td>
+                 <td>nisi</td>
+               </tr>
+               <tr>
+                 <td>1,005</td>
+                 <td>Nulla</td>
+                 <td>quis</td>
+                 <td>sem</td>
+                 <td>at</td>
+               </tr>
+               <tr>
+                 <td>1,006</td>
+                 <td>nibh</td>
+                 <td>elementum</td>
+                 <td>imperdiet</td>
+                 <td>Duis</td>
+               </tr>
+               <tr>
+                 <td>1,007</td>
+                 <td>sagittis</td>
+                 <td>ipsum</td>
+                 <td>Praesent</td>
+                 <td>mauris</td>
+               </tr>
+               <tr>
+                 <td>1,008</td>
+                 <td>Fusce</td>
+                 <td>nec</td>
+                 <td>tellus</td>
+                 <td>sed</td>
+               </tr>
+               <tr>
+                 <td>1,009</td>
+                 <td>augue</td>
+                 <td>semper</td>
+                 <td>porta</td>
+                 <td>Mauris</td>
+               </tr>
+               <tr>
+                 <td>1,010</td>
+                 <td>massa</td>
+                 <td>Vestibulum</td>
+                 <td>lacinia</td>
+                 <td>arcu</td>
+               </tr>
+               <tr>
+                 <td>1,011</td>
+                 <td>eget</td>
+                 <td>nulla</td>
+                 <td>Class</td>
+                 <td>aptent</td>
+               </tr>
+               <tr>
+                 <td>1,012</td>
+                 <td>taciti</td>
+                 <td>sociosqu</td>
+                 <td>ad</td>
+                 <td>litora</td>
+               </tr>
+               <tr>
+                 <td>1,013</td>
+                 <td>torquent</td>
+                 <td>per</td>
+                 <td>conubia</td>
+                 <td>nostra</td>
+               </tr>
+               <tr>
+                 <td>1,014</td>
+                 <td>per</td>
+                 <td>inceptos</td>
+                 <td>himenaeos</td>
+                 <td>Curabitur</td>
+               </tr>
+               <tr>
+                 <td>1,015</td>
+                 <td>sodales</td>
+                 <td>ligula</td>
+                 <td>in</td>
+                 <td>libero</td>
+               </tr>
+             </tbody>
+           </table>
+         </div>
+       </div>
+     </div>
+   </div> -->
