--- a/client/app/projects/projects.html
+++ b/client/app/projects/projects.html
@@ -18,7 +18,7 @@
       <h1 class="page-header">Meet your next project</h1>
     </div>
     <div class="col-md-2"> <br><br><br>
-      <button type="button" class="btn btn-primary btn-block">Add your Project</button> <br>
+      <a href="/create" class="btn btn-primary btn-block">Add your Project</a> <br>
     </div>
   </div>
   <div class="row">
