updating main page, updating css and domain fixes

--- a/client/app/projects/projects.html
+++ b/client/app/projects/projects.html
@@ -24,11 +24,11 @@
   <div class="row">
     <div class="col-md-2">
       <div class="list-group">
-        <button type="button" class="list-group-item">Healthcare</button>
-        <button type="button" class="list-group-item">Gastronomy</button>
-        <button type="button" class="list-group-item">Software</button>
-        <button type="button" class="list-group-item">Electronics</button>
-        <button type="button" class="list-group-item">Sports</button>
+        <button type="button" class="list-group-item btn-block">Healthcare</button>
+        <button type="button" class="list-group-item btn-block">Gastronomy</button>
+        <button type="button" class="list-group-item btn-block">Software</button>
+        <button type="button" class="list-group-item btn-block">Electronics</button>
+        <button type="button" class="list-group-item btn-block">Sports</button>
       </div>
     </div>
 
