you now may edit projects

--- a/client/app/create/create.html
+++ b/client/app/create/create.html
@@ -1,6 +1,6 @@
 <div class="container" ng-controller="CreateCtrl">
 <script type="text/ng-template" id="descriptionTemplate.md">
-**port.ninja** allows you to find the perfect partners you need for the project you have in mind.
+**team.port.ninja** allows you to find the perfect partners you need for the project you have in mind.
 
 We recommend outlining the basic purpose of your project and describing your ideal teammates.
 
