--- a/client/app/projects/projects.html
+++ b/client/app/projects/projects.html
@@ -49,7 +49,7 @@
                   <div class="col-md-offset-4 col-md-8">
                     <div class="btn-group" role="group" aria-label="...">
                       <button type="button" class="btn btn-danger" ng-click="deleteProject(project._id)">Delete</button>
-                      <button type="button" class="btn btn-info">Edit</button>
+                      <a type="button" class="btn btn-info" href="/edit/{{project._id}}">Edit</a>
                       <button type="button" class="btn btn-primary">Follow</button>
                       <button type="button" class="btn btn-success">Like</button>
                     </div>
