--- a/client/app/projects/projects.html
+++ b/client/app/projects/projects.html
@@ -18,7 +18,7 @@
       <h1 class="page-header">Meet your next project</h1>
     </div>
     <div class="col-md-2"> <br><br><br>
-      <a href="/create" class="btn btn-primary btn-block">Add your Project</a> <br>
+      <a href="/create" class="btn btn-primary btn-block" ng-show="nav.isLoggedIn()">Add your Project</a> <br>
     </div>
   </div>
   <div class="row">
@@ -38,30 +38,51 @@
           <div class="panel panel-default">
             <div class="panel-heading">{{project.projectName}}</div>
             <div class="panel-body">
+
               <div class="col-md-4">
-                <a href="#" class="thumbnail">
-                  <img src="{{project.mainImage}}" alt="...">
-                </a>
-              </div>
-              <div class="col-md-8">
-                <div class="row well" marked="project.projectDescription"></div>
                 <div class="row">
-                  <div class="col-md-offset-4 col-md-8">
-                    <div class="btn-group" role="group" aria-label="...">
-                      <button type="button" class="btn btn-danger" ng-click="deleteProject(project._id)">Delete</button>
-                      <a type="button" class="btn btn-info" href="/edit/{{project._id}}">Edit</a>
-                      <button type="button" class="btn btn-primary">Follow</button>
-                      <button type="button" class="btn btn-success">Like</button>
+                  <a href="/project/{{project._id}}" class="thumbnail">
+                    <img src="{{project.mainImage}}" alt="{{project.projectName}}">
+                  </a>
+                </div>
+
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="btn-group btn-group-justified" role="group" aria-label="..." ng-show="nav.isAdmin()">
+                      <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-danger" ng-click="deleteProject(project._id)">Delete</button>
+                      </div>
+                      <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-info" href="/edit/{{project._id}}">Edit</a>
+                      </div>
                     </div>
                   </div>
-                </div> <br>
+                </div>
+                <br>
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                      <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-primary">Follow</button>
+                      </div>
+                      <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-success">Like</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               </div>
+
+              <div class="col-md-8">
+                <div class="row well" marked="project.projectDescription"></div>
+              </div>
+
             </div>
           </div>
         </div>
       </div>
       <div class="alert alert-warning" role="alert" ng-hide="projectList.length">Sorry, there are no projects to view.</div>
-
     </div>
   </div>
 
