--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -31,34 +31,35 @@
             </div>
         </div>
     </div>
+
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary"></i>
+                    <h3>Start your project</h3>
+                    <p class="text-muted">Share your ideas and start a team.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <i class="fa fa-4x fa-comments wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Find associates</h3>
+                    <p class="text-muted">Meet the right people for your project.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <i class="fa fa-4x fa-group wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Join a Project</h3>
+                    <p class="text-muted">Show your skills being a members of a successful team.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <h3>Make new friends</h3>
+                    <p class="text-muted">Have fun working with new people on projects</p>
                 </div>
             </div>
         </div>
@@ -77,7 +78,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ARTS
                             </div>
                         </div>
                     </div>
@@ -92,7 +93,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                TECHNOLOGY
                             </div>
                         </div>
                     </div>
@@ -107,7 +108,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                BUSINESS
                             </div>
                         </div>
                     </div>
@@ -122,7 +123,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                MUSIC
                             </div>
                         </div>
                     </div>
@@ -137,7 +138,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                FASHION
                             </div>
                         </div>
                     </div>
@@ -152,7 +153,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ENVIRONMENT
                             </div>
                         </div>
                     </div>
@@ -167,7 +168,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ENTERTAINMENT
                             </div>
                         </div>
                     </div>
@@ -182,7 +183,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                EDUCATION
                             </div>
                         </div>
                     </div>
@@ -197,7 +198,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                FOOD
                             </div>
                         </div>
                     </div>
@@ -212,7 +213,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                COMMUNITY
                             </div>
                         </div>
                     </div>
@@ -227,7 +228,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                SPORTS
                             </div>
                         </div>
                     </div>
@@ -242,7 +243,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DESIGN
                             </div>
                         </div>
                     </div>
@@ -252,14 +253,16 @@
     </div>
 </section>
 
+
 <aside class="bg-dark">
     <div class="container text-center">
         <div class="call-to-action">
-            <h2>Free Download at Start Bootstrap!</h2>
-            <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+            <h2>OR ANY OTHER CATEGORY YOU WANT!</h2>
+            <a href="#" class="btn btn-default btn-xl wow tada">UNDECIDED</a>
         </div>
     </div>
 </aside>
+
 
 <section id="contact">
     <div class="container">
