--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -258,7 +258,7 @@
     <div class="container text-center">
         <div class="call-to-action">
             <h2>OR ANY OTHER CATEGORY YOU WANT!</h2>
-            <a href="#" class="btn btn-default btn-xl wow tada">UNDECIDED</a>
+            <a href="#" class="btn btn-default btn-xl wow tada">UNDECIDED?</a>
         </div>
     </div>
 </aside>
@@ -274,7 +274,7 @@
             </div>
             <div class="col-lg-4 text-center">
                 <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                <p><a href="#">team [at] elninja.com</a></p>
             </div>
         </div>
     </div>
