--- a/client/app/projects/projects.html
+++ b/client/app/projects/projects.html
@@ -48,7 +48,7 @@
 
                 <div class="row">
                   <div class="col-md-12">
-                    <div class="btn-group btn-group-justified" role="group" aria-label="..." ng-show="nav.isAdmin()">
+                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
                       <div class="btn-group" role="group">
                         <button type="button" class="btn btn-danger" ng-click="deleteProject(project._id)">Delete</button>
                       </div>
