--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -13,9 +13,16 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <h2 class="section-heading">MAKE YOUR TEAM</h2>
                 <hr class="light">
-                <p class="text-faded">team.port.ninja allows you to find the perfect partners you need for the project you have</p>
+                <p class="text-faded">
+                    Team Maker connects people to get together and form teams to implement ideas and develop projects
+                    
+
+                    <br>
+                    If you want to create a project or be part of another one, you are in the right place.
+
+                    <!--Team maker it’s a platform designed to provide you all the help that you’ll need  to realize your projects. If you have an idea and you need other people to help you to realize it, Team maker it’s the right place for you!--> </p>
                 <a href="/signup" class="btn btn-default btn-xl">Get Started!</a>
             </div>
         </div>
